# yolov4_trt_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py  trt_yolo.py  trt_yolo_v3.py  trt_yolo_v4.py  trt_yolo_v4_batch.py  trt_yolo_v4_zed.py
dependencies/: install_jetson_inference.sh  install_protobuf-3.8.0.sh  install_pycuda.sh
launch/: video_input.launch  video_output.launch  video_source.launch  video_viewer.launch  yolov3_trt.launch  yolov4_trt.launch  yolov4_trt_batch.launch
msg/: Detector2D.msg  Detector2DArray.msg  ObjectHypothesis.msg
scripts/: trt_yolo_ros.py
utils/: yolo_classes.py  yolo_with_plugins.py  yolo_with_plugins_batch.py  yolo_with_plugins_v4.py
yolo/: convert_yolo_trt.sh  download_yolo.sh  plugins.py
